CSS changes for search button bug on mobile

--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -3,8 +3,12 @@ div.navbarContainer {
     position: sticky;
     top: 0;
     z-index: 100000;
-    background-color: white;
+
     width: calc(100% - 4px);
+    max-width: 100vw;
+    min-width: 99vw;
+
+    background-color: white;
     border: 2px solid #141414;
     font-family: "Anonymous Pro";
     font-size: calc(0.5vw + 10px);
