--- a/src/styles/routes/account.css
+++ b/src/styles/routes/account.css
@@ -1,6 +1,7 @@
 .accountCounter {
     display: grid;
     width: 100%;
+    max-width: 100vw;
     grid-template-areas:
         "accountBackground"
         "accountContentContainer"
@@ -99,9 +100,12 @@
     display: flex;
     flex-direction: column;
 
+    font-size: 1.5vw;
+
     h2 {
         justify-self: center;
     }
+    
 }
 
 .accountInfo {
